--- a/vis-walk-through-example.html
+++ b/vis-walk-through-example.html
@@ -1,4 +1,4 @@
-<div class="wiki-example-app" ng-controller="WikiExampleController as cntrl">
+<div class="vis-walk-through-example-app" ng-controller="WikiExampleController as cntrl">
   <div ng-if="cntrl.error" class="alert alert-danger">
     <p>{{cntrl.error}}</p>
   </div>
